Fix grid alignment.

--- a/src/core/app.less
+++ b/src/core/app.less
@@ -20,6 +20,10 @@ body {
 .contain.closed { padding-left: calc(65px + 2vw); }
 .contain.open { padding-left: calc(200px + 2vw); }
 
+.content {
+  justify-content: flex-start;
+}
+
 .opt     { cursor: pointer; }
 .grab    { cursor: move; }
 .fa-icon { vertical-align: middle; }
